Fix awatar width on tablet screen size

--- a/src/components/pages/CommunityPage/CommunityPage.module.css
+++ b/src/components/pages/CommunityPage/CommunityPage.module.css
@@ -427,6 +427,7 @@
   height: 48px;
   border-radius: 50%;
   display: block;
+  max-width: unset;
 }
 .CommunityMembersMemberName{
   padding: 0.75rem;
